Date	Added
11/15
	* Added GM Command Logs & Added TXT Logs + TXT Log Options [Codemaster]
	* Added spawning of monsters at specific level by adding ,# after the spawn name. [Valaris]
	  mobs_level_up option should be on when using this.
	  (Example: {ama_dun01.gat,0,0,0,0	monster	Shinobi,99	1401,1,0,0,0} to spawn a level 99 shinobi.)
	* Added addtoskill script command for (levels can stack on top of existing levels). [Valaris]
	  Use same usage as skill script command.
	* Added -ffast-math argument to makefile to increase performance, thanks to kashy. [Valaris]
	* Added small and big mob sprite spawning. [Valaris]
	  -Added @monstersmall and @monsterbig commands.
	  -For using in scripts, use id +2000 for small and id +4000 for big.
	   (Example: 3002 for small poring and 5002 for big poring)
	* Added mobs_level_up option. [Valaris]
	  -Everytime a monster kills a play their level will increase and show levelup animation.
	  -Their 6 main stats and speed will increase as they level.
	  -They will recover 10% of the max hp of the player it kills.
	  -Player will gain extra exp based on how much stronger a monster is than normal.
	  -Skill estimation will show monsters current level (instead of reading from db).
	  -Will display level 99 aura if and when a monster hits level 99.
	  -They will not go higher than level 99.
        * Fixed maximum skill levels not following skill tree [celest]
        * Updated HP/SP for baby classes [celest]
        * Corrected pc_calc_base_job [celest]
        * Skill updates [celest]
         - Marionette Control (70%), Berserk (thanks to DracoRPG)
        * Modified pc_jobchange code to work with new pc_calc_base_job [celest]
        * Corrected skill_tree_get_max, sorry >.< [celest]

11/14
	* Made the Advance jobchangers to kRO standars with the following;
	 - Checks if you are level 99/50 and 2nd class OR above.
	 - Checks if you have an Cart of Falcon equiped.